<resources>
    <string name="app_name" translatable="false">RiesgoCop</string>
    <string name="enter_your_id">Enter your student ID</string>
    <string name="enter">Enter</string>
    <string name="password">Enter your password</string>
    <string name="welcome">Welcome</string>
    <string name="student">Student</string>
    <string name="upload_picture">Upload a picture</string>
    <string name="take_pic">Take a picture</string>
    <string name="upload">Upload</string>
    <string name="admin">Administrator</string>
    <string name="error_login_default_username">Error during authentication process</string>
    <string name="instructions">Please sing in to the application with your UCA education Google  account</string>
    <string name="application_logo">Application logo</string>
    <string name="user_not_found">User not found</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="n_a_value">N/A</string>
    <string name="username">Username</string>
    <string name="tus_reportes">Your reports</string>
    <string name="newIssue">New</string>
    <string name="in_process">in process</string>
    <string name="close">Close</string>
    <string name="Zero">0</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="fill_the_form">Fill the form</string>
    <string name="report_title">Report title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="user_profile">user profile</string>
    <string name="menu">menu</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="report_s_photos">Report\s photos</string>
    <string name="select_photos">Select photos</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="accident_s_severity">Accident\'s Severity</string>
    <string name="severity">Severity</string>
    <string name="person_injured_name">Person\'s name</string>
    <string name="gender_of_the_person_injured">Gender</string>
    <string name="occupation_of_the_person">Occupation</string>
    <string name="place_of_attention">Place of attention</string>
    <string name="was_necessary_an_ambulance">Was necessary an ambulance?</string>
    <string name="loginmsm1">Login cancelled</string>
    <string name="loginmsm2">Error starting session</string>
    <string name="alerttitle">This account is not a UCA account</string>
    <string name="alertmsm">Would you like to continue as a guest or try other account?
    You cannot create reports</string>
    <string name="continuex">Continue</string>
    <string name="changeacct">Change account</string>
    <string name="errortypeacct1">insufficient permissions</string>
    <string name="errortypeacct2">your type of user is not an UCA account some features are disable</string>
    <string name="ok">ok</string>
    <string name="noPics">No photos provided</string>
    <string name="permissiond">Permission denied</string>
    <string name="succes1">Your report was added</string>
    <string name="failure1">Report upload failed</string>
    <string name="failure2">Could not create file in external media</string>
    <string name="notyName">Reportes</string>
    <string name="notyDesc">En este canal se muestran la lista de reportes</string>
    <string name="chnenlsid">Riesgocop\'s Accidents</string>
    <string name="actual_state">Actual state</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="add_your_current_location">Add your current location</string>
    <string name="title_activity_maps">Map</string>
    <string name="locationS">Accident location</string>
    <string name="photos">Photos</string>
    <string name="map">Map</string>
    <string name="user">User</string>
    <string name="photo_1">photo 1</string>
    <string name="photo_2">photo 2</string>
    <string name="photo_3">photo 3</string>
    <string name="fields">Obligatory fields are not set</string>
    <string name="therno">There is no user</string>
    <string name="nophton">Photo no taken</string>
    <string name="failure3">Max number of photos reached</string>
    <string name="seen">Seen</string>
    <string name="finished">Ended</string>
    <string name="Cancelled">Cancelled</string>
    <string name="gps_provider_on">GPS provider ON</string>
    <string name="gps_provider_off">GPS provider OFF</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_cover">Photo cover</string>
    <string name="update">Updated</string>
    <string name="new_state">New State</string>
    <string name="failure4">Failed to update</string>

</resources>
