<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/degradado_inicial">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameapp_login"
            android:text="@string/app_name"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:textColor="#FFFF"
            android:textSize="40sp"
            android:layout_gravity="center"/>
    <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

    <EditText
            android:id="@+id/et_carnet_worker"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_id"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:layout_gravity="center_horizontal"/>

    <EditText
            android:id="@+id/et_pass_encargado"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:id="@+id/bt_worker_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/enter"
            android:layout_gravity="center"/>

</LinearLayout>