<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
              android:background="@color/colorOptions"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/newIssue"
                android:drawableStart="@drawable/ic_fiber_new_black_48dp"
                android:drawableLeft="@drawable/ic_fiber_new_black_48dp"/>

        <TextView
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Zero"
                android:id="@+id/newIssueValue"
                android:layout_width="match_parent"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:drawableStart="@drawable/ic_active_pause"
                android:text="@string/in_process"
                android:drawableLeft="@drawable/ic_active_pause"/>

        <TextView
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Zero"
                android:id="@+id/in_process"
                android:layout_width="match_parent"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/close"
                android:drawableStart="@drawable/ic_active_done"
                android:drawableLeft="@drawable/ic_active_done"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/close_issue_value"
                android:gravity="center"
                android:text="@string/Zero"/>
    </LinearLayout>

</LinearLayout>