<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".views.fragments.ReportAdminFragment">


    <TextView
            android:text="@string/n_a_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_light"
            android:textColor="@color/colorPrimaryDark"/>

    <TextView
            android:id="@+id/nameOfPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/n_a_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            />

    <TextView
            android:id="@+id/genderOfPerson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/n_a_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameOfPerson"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            />

    <TextView
            android:id="@+id/description_report_viewer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/n_a_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderOfPerson"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            />

    <TextView
            android:id="@+id/placeAttention"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/n_a_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_report_viewer"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            />

    <TextView
            android:id="@+id/ambulance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/n_a_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeAttention"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            />


    <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ambulance"
            android:textColor="@color/colorPrimaryDark"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_state"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            android:text="@string/actual_state"
            android:textColor="@color/colorPrimaryDark"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_new_state"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:text="@string/new_state"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/btn_update_state"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_state"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_state"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_new_state"
            app:layout_constraintTop_toBottomOf="@+id/tv_state"
    />

    <Button
            android:id="@+id/btn_update_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_state"
            android:background="@drawable/button_map"/>
    <TextView
            android:text="@string/photos"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_update_state"/>
    <HorizontalScrollView
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFCACACA"
                android:orientation="horizontal">

            <include
                    layout="@layout/photo_item"
                    android:id="@+id/photo1F"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>

            <include
                    layout="@layout/photo_item"
                    android:id="@+id/photo2F"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>

            <include
                    layout="@layout/photo_item"
                    android:id="@+id/photo3F"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
            />
        </LinearLayout>

    </HorizontalScrollView>

    <Button
            android:text="@string/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map_btn"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_map"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/location"
            app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>